--- a/.github/workflows/capture2.yml
+++ b/.github/workflows/capture2.yml
@@ -27,13 +27,18 @@ jobs:
         with:
           node-version: '20'
 
-      # 한글 폰트 + puppeteer 런타임에 필요한 라이브러리 최소 세트
+      # 한글 폰트 + headless Chrome 필수 라이브러리
       - name: Install deps for headless Chrome
+        shell: bash
         run: |
+          set -eux
           sudo apt-get update
           sudo apt-get install -y \
-            fonts-noto-cjk libnss3 libxss1 libasound2 libxkbcommon0 libxshmfence1 \
+            fonts-noto-cjk fonts-noto-color-emoji \
+            libnss3 libxss1 libxkbcommon0 libxshmfence1 \
             libxcomposite1 libxdamage1 libxrandr2 libgbm1
+          # Ubuntu 24.04(noble)은 libasound2t64로 변경됨 → 폴백 설치
+          sudo apt-get install -y libasound2 || sudo apt-get install -y libasound2t64
 
       - name: Install NPM deps
         run: npm i puppeteer firebase-admin
@@ -50,7 +55,7 @@ jobs:
         run: |
           node capture2.js --keyword "${{ github.event.inputs.keyword }}"
 
-      # 로컬 저장된 PNG들을 아티팩트로 받아보기 (DRY_RUN이든 아니든)
+      # 로컬 저장된 PNG들을 아티팩트로 수집
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
